# SSR-Sycamore

./: .gitignore  Cargo.toml  index.html  init.ts  package.json  style.css  tailwind.config.js
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
macros/src/: lib.rs
src/: main.rs
