[package]
name = "sycamore_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.3", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
app = { path = "./app" }
postcard = { workspace = true }
base64 = { workspace = true }
lazy_static = { workspace = true }

[workspace.dependencies]
postcard = { version = "1.0", features = ["use-std"] } 
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
lazy_static = "1.4"

[workspace]
members = [
    "client",
    "app"
]
