[package]
name = "sycamore_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.3", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
futures = "0.3"
app = { path = "./app" }
postcard = { workspace = true }
base64 = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }

[workspace.dependencies]
postcard = { version = "1.0", features = ["use-std"] } 
serde = { version = "1.0", features = ["derive"] }
base64 = "0.20"
lazy_static = "1.4"
log = "0.4"
wasm-bindgen = "0.2"

[workspace]
members = [
    "client",
    "app"
]
