[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8.0", features = ["ssr", "hydrate", "suspense"] }
serde = { workspace = true }
postcard = { workspace = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-sockets = "1.0"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = { workspace = true }
wasm-bindgen = { workspace = true }
