[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
app = { path = "../app" }
wasm-bindgen = "0.2"
web-sys = "0.3"
postcard = { workspace = true }
base64 = { workspace = true }
